2003-04-25  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/docsystem.cpp: Accommodate the latest HTML doc
	structure.

2003-04-24  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/mainwin.cpp: Fix behaviour of user tools warning
	message box.

	* standalone/wxwin/makefile.gnu: Deduce OS type using uname tool.

2003-04-17  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/appsettings.cpp, standalone/wxwin/mainwin.cpp:
	Rationalise the treatment of the build tools directory during startup
	and when using the build tools dialog.

	* standalone/wxwin/configtool.cpp: Wait for the installation of platform
	definitions to complete on Linux.

2003-04-16  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/configtool.cpp: Install default platform definitions
	on initial invocation. Generate Cygwin text-mode mounts explicitly since
	text-mode is no longer the default mount type.

2003-04-11  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/ecutils.cpp, standalone/wxwin/ecutils.h: Create
	wxString wrappers for cygwin_conv_to_*_path().

	* standalone/wxwin/appsettings.cpp: Accommodate POSIX-style values of
	the ECOS_REPOSITORY environment variable.

2003-04-10  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/docsystem.cpp: Eliminate pop-up warning when
	attempting to create a directory under $HOME/.eCosDocs/ which already
	exists.

2003-04-07  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/appsettings.cpp,
	  standalone/wxwin/appsettings.h: Look for user tools and build
	tools relative to the configtool executable file.

2003-04-05  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/makefile.gnu: Build Cygwin hosted configtool with
	"--subsystem windows" to eliminate the console window.

	* standalone/wxwin/admindlg.cpp: Strip CR characters from the license
	text on Linux.

2003-03-28  John Dallaway  <jld@ecoscentric.com>

	* standalone/wxwin/packagesdlg.cpp: Fix population of package lists