@@ -50,7 +50,7 @@
 #include "cdl_exec.hxx"
 #include "ecosconfig.hxx"
 
-#define TOOL_VERSION "1.3.net"
+#define TOOL_VERSION "2.0"
 #define TOOL_COPYRIGHT "Copyright (c) 2002 Red Hat, Inc."
 #define DEFAULT_SAVE_FILE "ecos.ecc"
 static char* tool = "ecosconfig";
